--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ bleach==6.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -93,6 +94,7 @@ Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+python-multipart==0.0.9
 PyYAML==6.0.1
 pyzmq==26.0.2
 referencing==0.35.0
@@ -120,6 +122,7 @@ types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 uri-template==1.3.0
 urllib3==2.2.1
+uvicorn==0.29.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
